fixed the z-index and the state checks if the modal has been opened

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25900,11 +25900,11 @@ figcaption {
   font-size: 1.5rem;
 }
 
-.dialog__content {
+.v-dialog__content {
   z-index: 1000001 !important;
 }
 
-.overlay {
+.v-overlay {
   z-index: 1000000 !important;
 }
 
